# toypython

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ia5_kli_toypython/: __init__.py
src/toypython/: __init__.py  toypython.py
tests/: ia5_kli_toypython.py  test_toypython.py
