[tool.poetry]
name = "ia5_kli_toypython"
version = "0.1.0"
description = "python version of toy.R, to make some common tasks with string manipulation and regular expressions a bit easier."
authors = ["Kaylee Li"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
regex = ">=2024.11.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
jupyter = "^1.1.1"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
